Version 0.3
===========

30.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated the favicon

29.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Changed consumer token to use the new application (140_mk_bot)
  * Bugfixes:
    - Tweet overlay is now closing properly

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Implemented endless page for tweets/users on category show page

26.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Bugfixes:
    - Fixed the issue with RT and Reply not responding properly

24.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Changed the color of the logo
  * Changed the font in the headings
  * Adjusted the position of Reply and RT buttons
  * Bugfixes:
    - The pagination works as it should now

22.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Bugfixes:
    - Fixed the 'create list from category' option
	  - Changed 'denovi' to 'dena'
	  - Fixed the look of the 'sign in button'
	  - Fixed the down arrow when user is not logged in
	  - Bigger text in settings page
	  - Fixed the sticky footer
	* Switched category permalinks to latin
	* User info presents categories
	* Ordered categories by number of users

04.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Moved click area for extra info to bottom


03.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Added alt text to tweets/users link
  * Bugfixes
    - Fixed the problem with RT and Reply not working after tweet refresh
    - Corrected the broken design in the sidebar
    - Corrected the design for settings

01.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Replacing register link with cute image
  * Showing users instead of tweets as default
  * Design for category settings page
  * Bugfixes
    - Extended user info is now working after refresh
    - Links on the user tab refer to twitter accounts instead of local ones