@@ -244,7 +244,7 @@
     position: relative
     width: 262px
     +text-shadow(#000, 1px, 1px, 2px)
-    
+
     a
       display: block
       float: left
@@ -253,6 +253,9 @@
       width: 10px
       height: 12px
       +hover-link
+
+  h2.smaller
+    font-size: 1.1em
 
   .tweets
     display: block
