@@ -5,7 +5,7 @@
   = render :partial => 'shared/user_status'
 
   #hashtag_filter
-    %h2= t('category.create_list_title')
+    %h2.smaller= t('category.create_list_title')
 
     .tweets
       .option-box
