@@ -5,6 +5,7 @@ Version 0.3
 ==========
   Peco Danajlovski <vortexmk@gmail.com>
   * Updated the favicon
+  * Adjusted sidebar header font in the category view
 
 29.05.2010
 ==========
